--- a/pop-up.css
+++ b/pop-up.css
@@ -3,9 +3,7 @@
 	display: none;
 	z-index: 5;
 	background-color: rgba(0, 0, 0, 0.85);
-	width: 100vw;
 	height: 100vh;
-	padding: 1em;
 	top: 0;
 	animation: pop 0.2s ease-in;
 	
@@ -21,6 +19,7 @@
 	display: flex;
 	justify-content: center;
 	height: 100%;
+	width: 100%;
 	flex-direction: column;
 }
 
@@ -32,7 +31,8 @@
 
 .content1{
 	width: 100%;
-	justify-content: space-around;
+	justify-content: center;
+	align-items: center;
 	flex-direction: row;
 	display: flex;
 }
@@ -52,7 +52,7 @@ th {
 
 .group{
 	display: block;
-	width: 49%;
+	width: 47%;
 	height: 100%;
 }
 
@@ -61,7 +61,9 @@ th {
 	padding: 15px;
 	border: 3px solid #FFFFFF;
 	box-sizing: border-box;
-	/* margin: 0 1em; */
+	margin-left: 1em;
+	position: relative;
+	padding: 0.5em;
 }
 
 .judul .garis{
@@ -71,20 +73,23 @@ th {
 }
 
 .isi{
-	padding: 0.7em 0em 2.2em 0em;
-	font-size: 11.5px; 
+	padding: 0.7em;
+	font-size: 0.52rem; 
 }
 
 
 .judul h4{
-	font-weight: bold
+	font-weight: bold;
+	font-size: 1.2rem;
 }
 
 .ancor{
+	font-size: 0.5rem;
 	color: black;
 	font-style: normal;
-	position: relative;
-	bottom: 5px;
+	position: absolute;
+	display: block;
+	bottom: 1em;
 }
 
 .hover{
@@ -123,7 +128,21 @@ th {
 	}
 }
 
-@media (max-width: 600px){
+@media (max-width: 360px) and (orientation: portrait){
+	.ancor{
+		font-size: 0.6rem;
+	}
+	.isi{
+		font-size: 0.5rem;
+	}
+	.judul h4{
+		font-size: 1.2rem;
+	}
+}
+@media (max-width: 600px) and (orientation: portrait){
+	.group{
+		width: 98%;
+	}
 	.content1{
 		flex-direction: column;
 	}
@@ -131,13 +150,39 @@ th {
 		margin-left: 0;
 	}
 	.ancor{
-		font-size: 1rem;
+		font-size: 0.7rem;
 	}
 }
-
-/* }
-@media(min-width: 1024px){
+@media (min-width: 800px) and (max-width: 1023px) and (orientation: landscape){
+	.ancor{
+		font-size: 0.7rem;
+	}
+	.isi{
+		font-size: 0.75rem;
+	}
 	.judul h4{
-		font-size: 28px;
-	} */
+		font-size: 2rem;
+	}
+}
+@media (min-width: 1024px) and (orientation: landscape){
+	.ancor{
+		font-size: 0.9rem;
+	}
+	.isi{
+		font-size: 1rem;
+	}
+	.judul h4{
+		font-size: 2.3rem;
+	}
+}
+@media (min-width: 1024px) and (orientation: portrait){
+	.ancor{
+		font-size: 0.9rem;
+	}
+	.isi{
+		font-size: 1rem;
+	}
+	.judul h4{
+		font-size: 2.3rem;
+	}
 }
